2018-12-18  Stefan Liebler  <stli@linux.ibm.com>

	* config.h.in (HAVE_S390_MIN_Z10_ZARCH_ASM_SUPPORT): New undefine.
	* sysdeps/s390/configure.ac: Add check for z10 support.
	* sysdeps/s390/configure: Regenerated.

2018-12-18  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/i386/atomic-machine.h: Merged with ...
	* sysdeps/x86_64/atomic-machine.h: To ...
	* sysdeps/x86/atomic-machine.h: This.  New file.

2018-12-18  Florian Weimer  <fweimer@redhat.com>

	Rewrite locale/gen-translit.pl in Python.
	* locale/Makefile (generated): Add C-translit.h.
	(before-compile): Add $(objpfx)C-translit.h.
	(C-translit.h): Move to $(objpfx).  Create target directory.
	Build using Python script.
	* locale/gen-translit.py: New file.
	* locale/gen-translit.pl: Remove file.
	* locale/C-translit.h.in: Change comment character to '#' for
	easier parsing without a C preprocessor.
	* locale/C-translit.h: Remove generated file.
	* manual/install.texi (Tools for Compilation): Do not mention
	C-translit.h.
	* scripts/build-many-glibcs.py (Context.fix_glibc_timestamps):
	Remove locale/C-translit.h.
	* scripts/update-copyrights: Likewise.
	* INSTALL: Regenerate.

2018-12-18  Florian Weimer  <fweimer@redhat.com>

	[BZ #23995]
	* localedata/locales/bi_VU: Remove executable bit from file.

2018-12-17  Albert ARIBAUD <albert.aribaud@3adev.fr>

	* include/time.h
	(__localtime64): Add.
	* manual/maint.texi: Document Y2038 symbol handling.
	* time/localtime.c
	(__localtime64): Add.
	[__TIMESIZE != 64] (__localtime): Turn into a wrapper.

2018-12-17  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/ia64/sysdep.h (ASM_CLOBBERS_6_COMMON):
	Do not clobber r12.

	* scripts/glibcextract.py (compare_macro_consts): Take parameters
	to allow extra macros from first or second sources.
	* sysdeps/unix/sysv/linux/tst-mman-consts.py: New file.
	* sysdeps/unix/sysv/linux/Makefile [$(subdir) = misc]
	(tests-special): Add $(objpfx)tst-mman-consts.out.